--- a/01_agama/madhyama/MA_200.md
+++ b/01_agama/madhyama/MA_200.md
@@ -47,15 +47,15 @@ After he was reprimanded by those monks, the monk Ariṣṭa held to this bad vi
 
 That monk then did as the Bhagavān instructed. He got up from his seat, bowed his head at the Buddha’s feet, circled him three times, and departed. He went to the monk Ariṣṭa and told him, ‘The Bhagavān summons you!’ The monk Ariṣṭa then went to the Buddha, bowed his head at his feet, and withdrew to sit to one side.
 
-9\. The Bhagavān asked him, “Ariṣṭa, is it true that you’ve said this, ‘I know the Bhagavān thus explains the teaching, “Engaging in desires is no obstruction”?’
+9\. The Bhagavān asked him, “Ariṣṭa, is it true that you’ve said this, ‘I know the Bhagavān thus explains the teaching: “Engaging in desires is no obstruction”?’
 {:#p9}
 
-Ariṣṭa answered him, “Bhagavān, I really know that the Bhagavān thus explains the teaching, ‘Engaging in desires is no obstruction.’”
+Ariṣṭa answered him, “Bhagavān, I really know that the Bhagavān thus explains the teaching: ‘Engaging in desires is no obstruction.’”
 
 10\. The Bhagavān reprimanded him, “Ariṣṭa, how do you know that I explain the teaching that way? From whose mouth did you hear that I explain the teaching that way? You foolish man! How can you say to someone what I haven’t said to someone? You foolish man! You heard the other monks reprimand you together. You then should have answered according to the teaching, ‘Now, I will ask the monks.’”
 {:#p10}
 
-11\. The Buddha then asked the monks, “Do you also thus know that I explain the teaching this way, ‘Engaging in desires is no obstruction’?”
+11\. The Buddha then asked the monks, “Do you also thus know that I explain the teaching this way: ‘Engaging in desires is no obstruction’?”
 {:#p11}
 
 The monks replied, “No.”
@@ -63,7 +63,7 @@ The monks replied, “No.”
 12\. The Bhagavān asked, “How do you know how I explain the teaching?”
 {:#p12}
 
-The monks answered, “We know the Bhagavān explains the teaching this way, ‘Desire is an obstruction.’ The Bhagavān teaches that desire is an obstruction. Desire is like a chain of bones. The Bhagavān teaches that desire is like a chain of bones. Desire is like a cut of meat. The Bhagavān teaches that desire is like a cut of meat. Desire is like holding a torch. The Bhagavān teaches that desire is like holding a torch. Desire is like a fire pit. The Bhagavān teaches that desire is like a fire pit. Desire is like a viper. The Bhagavān teaches that desire is like a viper. Desire is like a dream. The Bhagavān teaches that desire is like a dream. Desire is like a loan. The Bhagavān teaches that desire is like a loan. Desire is like a tree fruit. The Bhagavān teaches that desire is like a tree fruit. We know that the Bhagavān explains the teaching this way.”
+The monks answered, “We know the Bhagavān explains the teaching this way: ‘Desire is an obstruction.’ The Bhagavān teaches that desire is an obstruction. Desire is like a chain of bones. The Bhagavān teaches that desire is like a chain of bones. Desire is like a cut of meat. The Bhagavān teaches that desire is like a cut of meat. Desire is like holding a torch. The Bhagavān teaches that desire is like holding a torch. Desire is like a fire pit. The Bhagavān teaches that desire is like a fire pit. Desire is like a viper. The Bhagavān teaches that desire is like a viper. Desire is like a dream. The Bhagavān teaches that desire is like a dream. Desire is like a loan. The Bhagavān teaches that desire is like a loan. Desire is like a tree fruit. The Bhagavān teaches that desire is like a tree fruit. We know that the Bhagavān explains the teaching this way.”
 
 13\. The Bhagavān praised them, “Good! Good, monks! You know that I explain the teaching this way. Why is that? I also say this: ‘Desire is an obstruction.’ I teach that desire is an obstruction. Desire is like a chain of bones. I teach that desire is like a chain of bones. Desire is like a cut of meat. I teach that desire is like a cut of meat. Desire is like holding a torch. I teach that desire is like holding a torch. Desire is like a fire pit. I teach that desire is like a fire pit. Desire is like a viper. I teach that desire is like a viper. Desire is like a dream. I teach that desire is like a dream. Desire is like a loan. I [764a] teach that desire is like a loan. Desire is like a tree fruit. I teach that desire is like a tree fruit.”
 {:#p13}
@@ -220,10 +220,10 @@ The monks answered, “So it is, Bhagavān. It’s a perfect statement and view,
 53\. “Something is viewed like this: ‘Whether it’s seen, heard, recognized, or known, what’s obtained or observed and what’s considered by the mind, it goes from this life to that life or from that life to this life.’ [He thinks]: ‘None of them are possessed by me, I am not possessed by them, nor are they the soul.’ Wisely observing it this way, he knows it as it really is.
 {:#p53}
 
-54\. “Something is viewed like this: ‘This is the soul, this is the world, and this is me. I will exist in the afterlife, being permanent and unchanging. I’ll be eternal and not subject to decay.’ [He thinks:] ‘None of them are possessed by me, I am not possessed by them, nor are they the soul.’ Wisely observing it this way, he knows it as it really is
+54\. “Something is viewed like this: ‘This is the soul, this is the world, and this is me. I will exist in the afterlife, being permanent and unchanging. I’ll be eternal and not subject to decay.’ [He thinks:] ‘None of them are possessed by me, I am not possessed by them, nor are they the soul.’ Wisely observing it this way, he knows it as it really is.
 {:#p54}
 
-55\. “Suppose a monk sees these six abodes of views and doesn’t see there a soul and doesn’t see something possessed by the soul. After not seeing them that way, he then doesn’t accept this world. After not accepting this world, then he has no fear. After he has no fear, then he attains parinirvāṇa: ‘My births have been ended, the religious life has been established, and the task has been accomplished. I won’t be subject to another existence.’ He knows it as it truly is.
+55\. “Suppose a monk sees these six abodes of views and doesn’t see there a soul and doesn’t see something possessed by a soul. After not seeing them that way, he then doesn’t accept this world. After not accepting this world, then he has no fear. After he has no fear, then he attains parinirvāṇa: ‘My births have been ended, the religious life has been established, and the task has been accomplished. I won’t be subject to another existence.’ He knows it as it truly is.
 {:#p55}
 
 #### The Liberated Monk
