--- a/01_agama/samyukta/01/SA1_147.md
+++ b/01_agama/samyukta/01/SA1_147.md
@@ -1,14 +1,16 @@
 ---
 layout: default
-title: 'The Related Discourses | 1. The Aggregates | 147. Three Upright Men'
+title: 'The Related Discourses | 1. The Aggregates | 147. Three Gentlemen'
 type: kramdown
-base: ../../
-previous: SA1_146.html
-next: SA1_148.html
+base: ../../../
+previous: ../../../03_samyukta/SA_01/SA1_146.html
+next: ../../../03_samyukta/SA_01/SA1_148.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
+# [The Related Discourses](../../../03_samyukta/)
+## [1. The Aggregates](../../../03_samyukta/SA_01/)
+### 147. Three Gentlemen
+
 1\. Thus have I heard: One time, the Buddha was staying at the Bamboo Park Monastery in Cedi.
 {:#p1}
 
