Edited SA 1.147-8. Put 148 in new directory.

--- a/01_agama/samyukta/01/SA1_148.md
+++ b/01_agama/samyukta/01/SA1_148.md
@@ -2,13 +2,13 @@
 layout: default
 title: 'The Related Discourses | 1. The Aggregates | 148. Sixteen Monks'
 type: kramdown
-base: ../../
-previous: ../../01_agama/samyukta/01/SA1_147.html
-next: ../SA_02/index.html
+base: ../../../
+previous: SA1_147.html
+next: ../../../03_samyukta/SA_01/SA1_149.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
+# [The Related Discourses](../../../03_samyukta/)
+## [1. The Aggregates](../../../03_samyukta/SA_01/)
 ### 148. Sixteen Monks
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the Umbrella Mango Tree Park on the bank of the Bhadra River in Mathurā.
