--- a/03_samyukta/SA_01/SA1_147.md
+++ b/03_samyukta/SA_01/SA1_147.md
@@ -23,7 +23,7 @@ The monks said to the Buddha, “No, Bhagavān.”
 4\. The Buddha told the monks, “Good, good! Forms are impermanent and subject to change. Tiring of and parting with desire for them, they cease, become tranquil, and disappear. Thus, since the distant past, all forms have been impermanent, painful, and subject to change. Known in this way, the conditioning of those forms produces the contaminants, which are harmful, burning, and grievous. Stop and cease them all. Once they are stopped and ceased, there’s no attachment. Once there’s no attachment, you’ll live in well-being. Once you live in well-being, you’ll attain parinirvāṇa. Feelings, perceptions, volitions, and consciousness are likewise.”
 {:#p4}
 
-5\. When the Buddha spoke this sūtra, those three upright men didn’t produce the contaminants, and their minds were liberated.
+5\. When the Buddha spoke this sūtra, the contaminants didn’t arise in those three upright men, and their minds were liberated.
 {:#p5}
 
 6\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
