--- a/01_agama/samyukta/01/SA1_147.md
+++ b/01_agama/samyukta/01/SA1_147.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 1. The Aggregates | 147. Three Gentlemen'
 type: kramdown
 base: ../../../
 previous: ../../../03_samyukta/SA_01/SA1_146.html
-next: ../../../03_samyukta/SA_01/SA1_148.html
+next: SA1_148.html
 ---
 
 # [The Related Discourses](../../../03_samyukta/)
