fixed uddana verse.

--- a/01_agama/samyukta/01/SA1_148.md
+++ b/01_agama/samyukta/01/SA1_148.md
@@ -37,9 +37,9 @@ They replied, “No, Bhagavān.”
 {:#p7}
 
 ###### Summary Verse
-* {:.verse}[139] Bamboo grove, [140] Vaiśālī,//
-[141] Purity, [142] correct examination,//
-[143] Impermanent, [144] painful, [145] not self,//
+* {:.verse}[139] Bamboo grove, [140] Vaiśālī,\\
+[141] Purity, [142] correct examination,\\
+[143] Impermanent, [144] painful, [145] not self,\\
 [146] Five, [147] three, and [148] sixteen.
 
 ### Notes
