Added EA 2.1-10, EA 27.6, EA 46.4, and EA 50.6.

--- a/04_ekottarika/EA_12_01.md
+++ b/04_ekottarika/EA_12_01.md
@@ -3,7 +3,7 @@ layout: default
 title: 'The Numerical Discourses | 12. One Entry to the Path | 1. The Four Stations of Mind'
 type: kramdown
 base: ../../
-previous: index.html
+previous: ../../../01_agama/ekottarika/02/EA_02_10.html
 next: EA_19_01.html
 ---
 
