--- a/04_ekottarika/EA_24_5.md
+++ b/04_ekottarika/EA_24_5.md
@@ -4,7 +4,7 @@ title: 'The Numerical Discourses | 24. The Tall Flag | 5. Miraculous Transformat
 type: kramdown
 base: ../../
 previous: EA_19_02.html
-next: EA_43_5.html
+next: ../../../01_agama/ekottarika/27/EA_27_06.html
 ---
 
 # [The Numerical Discourses](../../index.html)
