--- a/04_ekottarika/EA_43_07.md
+++ b/04_ekottarika/EA_43_07.md
@@ -4,7 +4,7 @@ title: 'The Numerical Discourses | 43. The God [Rohitassa] | 7. The Fruits of th
 type: kramdown
 base: ../../
 previous: EA_43_5.html
-next: EA_50_8.html
+next: ../../../01_agama/ekottarika/46/EA_46_04.html
 ---
 
 # [The Numerical Discourses](../../index.html)
