--- a/04_ekottarika/EA_43_5.md
+++ b/04_ekottarika/EA_43_5.md
@@ -3,7 +3,7 @@ layout: default
 title: 'The Numerical Discourses | 43. The God [Rohitassa] | 5. The Parable of the Raft'
 type: kramdown
 base: ../../
-previous: EA_24_5.html
+previous: ../../../01_agama/ekottarika/27/EA_27_06.html
 next: EA_43_07.html
 ---
 
