--- a/04_ekottarika/EA_50_8.md
+++ b/04_ekottarika/EA_50_8.md
@@ -3,7 +3,7 @@ layout: default
 title: 'The Numerical Discourses | 50. Venerating the Three Jewels | 8. The Snake Parable'
 type: kramdown
 base: ../../
-previous: EA_43_07.html
+previous: ../../../01_agama/ekottarika/50/EA_50_06.html
 next: index.html
 ---
 
