Added or edited SA 1.148-152, SA 7.10, SA 11.41, SA 11.58.

--- a/01_agama/samyukta/01/SA1_148.md
+++ b/01_agama/samyukta/01/SA1_148.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 1. The Aggregates | 148. Sixteen Monks'
 type: kramdown
 base: ../../../
 previous: SA1_147.html
-next: ../../../03_samyukta/SA_01/SA1_149.html
+next: SA1_149.html
 ---
 
 # [The Related Discourses](../../../03_samyukta/)
