--- a/03_samyukta/SA_01/SA1_148.md
+++ b/03_samyukta/SA_01/SA1_148.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 1. The Aggregates | 148. Sixteen Monks'
 type: kramdown
 base: ../../
 previous: ../../01_agama/samyukta/01/SA1_147.html
-next: ../SA_02/index.html
+next: ../../01_agama/samyukta/01/SA1_149.html
 ---
 
 # [The Related Discourses](../index.html)
