--- a/01_agama/ekottarika/27/EA_27_06.md
+++ b/01_agama/ekottarika/27/EA_27_06.md
@@ -4,7 +4,7 @@ title: 'The Numerical Discourses | 27. The Correct Destination of the Four Truth
 type: kramdown
 base: ../../../
 previous: ../../../04_ekottarika/EA_24_5.html
-next: ../../../04_ekottarika/EA_43_5.html
+next: ../31/EA_31_08.html
 ---
 
 # [The Numerical Discourses](../../../04_ekottarika/index.html)
