Added MA 146, edited MA 16 and 80 to correspond in parallel passages.

--- a/02_madhyama/01_First/02_Related_To_Action/MA_016.md
+++ b/02_madhyama/01_First/02_Related_To_Action/MA_016.md
@@ -38,16 +38,16 @@ next: ../03_Related_To_Sariputra/MA_017.html
 9\. “Kālāmas, ‘delusion’ means to be hindered by delusion. When the mind lacks satisfaction, sometimes a person kills beings, takes what’s not given, commits sexual misconduct, knowingly lies, and drinks alcohol.
 {:#p9}
 
-10\. “Kālāmas, the well-versed noble disciple parts with killing, stops killing, and discards the knife and bludgeon. With conscience and modesty and with kindness and compassion, they are beneficial to all living things, even insects and worms. They purify their mind and rid it of killing living things.
+10\. “Kālāmas, the well-versed noble disciple parts with killing, stops killing, and discards blades and bludgeons. With conscience and modesty and with kindness and compassion, they are beneficial to all living things, even insects and worms. They purify their mind and rid it of killing living things.
 {:#p10}
 
 11\. “Kālāmas, the well-versed noble disciple parts with taking what’s not given, stops taking what’s not given, and takes after something is given. They are happy with taking what is given and always like generosity. Rejoicing in having no stinginess, they don’t expect any reward. They purify their mind and rid it of taking what’s not given.
 {:#p11}
 
-12\. “Kālāmas, the well-versed noble disciple parts with what’s not the religious life, stops what’s not the religious life, and diligently cultivates the religious life. Diligent is their wondrous conduct. They are pure and undefiled, part with desire, and stop lust. They purify their mind and rid it of what’s not the religious life.
+12\. “Kālāmas, the well-versed noble disciple parts with what’s not the religious life, stops what’s not the religious life, and diligently cultivates the religious life. Diligent is their wondrous conduct. They are pure and undefiled, parting with desire and stopping lust. They purify their mind and rid it of what’s not the religious life.
 {:#p12}
 
-13\. “Kālāmas, the well-versed noble disciple parts with false speech, stops false speech, and speaks truly. They enjoy truth, abide in truth, and don’t budge from it. They are believed by all and don’t deceive the worldly. They purify their mind and rid it of false speech.
+13\. “Kālāmas, the well-versed noble disciple parts with false speech, stops false speech, and speaks truly. They enjoy truth, abide in truth, and don’t budge from it. They are believed by all and don’t deceive the world. They purify their mind and rid it of false speech.
 {:#p13}
 
 14\. “Kālāmas, the well-versed noble disciple parts with duplicity, stops duplicity, and practices what’s not duplicitous. They don’t divide others. They don’t hear something here and tell it there with the desire to divide those here. They don’t hear something there and tell it here with the desire to divide those there. They want to bring the estranged together, and they rejoice for those who are united. They don’t act partisan, don’t enjoy partisanship, and don’t commend partisanship. They purify their mind and rid it of duplicity.
@@ -114,7 +114,7 @@ next: ../03_Related_To_Sariputra/MA_017.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 15 November 2020
 {: .revised}
 
 ---
