--- a/02_madhyama/02_Lesser_Lands_and_Cities/09_Cause/MA_098.md
+++ b/02_madhyama/02_Lesser_Lands_and_Cities/09_Cause/MA_098.md
@@ -4,7 +4,7 @@ title: 'The Medium Discourses | Chapter 9: Cause | 98. The Abodes of Mindfulness
 type: kramdown
 base: ../../../
 previous: ../07_King_Dirghayu/MA_082.html
-next: ../../04_Discernment/15_Pairs/MA_186.html
+next: ../../../01_agama/madhyama/MA_146.html
 ---
 
 # [The Medium Discourses](../../index.html)
