--- a/02_madhyama/04_Discernment/15_Pairs/MA_186.md
+++ b/02_madhyama/04_Discernment/15_Pairs/MA_186.md
@@ -3,7 +3,7 @@ layout: default
 title: 'The Medium Discourses | Chapter 15: Pairs | 186. Inquiry'
 type: kramdown
 base: ../../../
-previous: ../../02_Lesser_Lands_and_Cities/09_Cause/MA_098.html
+previous: ../../../01_agama/madhyama/MA_146.html
 next: ../../../01_agama/madhyama/MA_200.html
 ---
 
