Added SA 1.18, 1.138, 1.158, and 6.5. Edited SA 1.17.

--- a/01_agama/samyukta/01/SA1_152.md
+++ b/01_agama/samyukta/01/SA1_152.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 1. The Aggregates | 152. Blockage'
 type: kramdown
 base: ../../../
 previous: SA1_151.html
-next: ../07/SA7_10.html
+next: SA1_158.html
 ---
 
 # [The Related Discourses](../../../03_samyukta/)
