--- a/01_agama/samyukta/01/SA1_17.md
+++ b/01_agama/samyukta/01/SA1_17.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 1. The Aggregates | 17. Cause and Condition'
 type: kramdown
 base: ../../../
 previous: SA1_16.html
-next: SA1_145.html
+next: SA1_18.html
 ---
 
 # [The Related Discourses](../index.html)
@@ -14,14 +14,17 @@ next: SA1_145.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. If causes and conditions give rise to forms, they are also impermanent. Forms are created by impermanent causes and impermanent conditions. How could they be permanent? Thus, feeling … perception … volition … consciousness is impermanent. If causes and conditions give rise to consciousnesses, they are also impermanent. Consciousnesses are created by impermanent causes and impermanent conditions. How could they be permanent? Thus, monks, form is impermanent, and feeling, perception, volition, and consciousness are impermanent. What’s impermanent then is painful. What’s painful then is not self. What’s not self then doesn’t belong to self.
+2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. Whatever causes and conditions give rise to forms, they are also impermanent. How could forms that arise from impermanent causes and conditions be permanent? Thus, feeling … perception … volition … consciousness is impermanent. Whatever causes and conditions give rise to consciousnesses, they are also impermanent. How could consciousnesses that arise from impermanent causes and conditions be permanent?
 {:#p2}
 
-3\. “Noble disciples who thus observe and tire of form and tire of feeling, perception, volition, and consciousness. Tiring of them, they don’t enjoy them. Not enjoying them, [2b] they are liberated. Being liberated, they know and see this: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+3\. “Thus, monks, form is impermanent, and feeling … perception … volition … consciousness is impermanent. Something that’s impermanent is painful, something that’s painful is not self, and something that’s not self doesn’t belong to self.
 {:#p3}
 
-4\. The monks who heard what the Buddha taught rejoiced and approved.
+4\. “Noble disciples who thus observe it are disillusioned with form, and they are disillusioned with feeling … perception … volition … consciousness. Being disillusion, they aren’t happy with [consciousness]. Not being happy with it, [2b] they are liberated. Being liberated, they know and see: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p4}
+
+5\. The monks who heard what the Buddha taught rejoiced and approved.
+{:#p5}
 
 ### Notes
 1. {:#n1} This sūtra is parallel with [SN 22.18](https://suttacentral.net/sn22.18){:target="_blank"} and similar to [SN 22.19](https://suttacentral.net/sn22.19){:target="_blank"}-[20](https://suttacentral.net/sn22.20){:target="_blank"}. [\[back\]](#ref1)
@@ -30,7 +33,7 @@ next: SA1_145.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 21 September 2020
+Last Revised: 6 December 2020
 {: .revised}
 
 ---
