--- a/01_agama/samyukta/01/SA1_42.md
+++ b/01_agama/samyukta/01/SA1_42.md
@@ -3,8 +3,8 @@ layout: default
 title: 'The Related Discourses | 1. The Aggregates | 42. Direct Realization'
 type: kramdown
 base: ../../../
-previous: ../../../03_samyukta/SA_01/SA1_16.html
-next: ../../../03_samyukta/SA_01/SA1_145.html
+previous: SA1_17.html
+next: SA1_138.html
 ---
 
 # [The Related Discourses](../../../03_samyukta/)
