Added translations of SA 1.143, SA 1.172, SA 4.55, SA 19.15, T780, and SA2 3.14. Created new folders as needed.

--- a/01_agama/samyukta/01/SA1_158.md
+++ b/01_agama/samyukta/01/SA1_158.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 1. The Aggregates | 158. Past, Future, and Pres
 type: kramdown
 base: ../../../
 previous: SA1_152.html
-next: ../06/SA6_5.html
+next: SA1_172.html
 ---
 
 # [The Related Discourses](../index.html)
