--- a/03_samyukta/SA_14/SA14_17.md
+++ b/03_samyukta/SA_14/SA14_17.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 14. Mindfulness of Breathing | 17. Attaining Fo
 type: kramdown
 base: ../../
 previous: SA14_3.html
-next: ../SA_34/index.html
+next: ../../01_agama/samyukta/19/SA19_15.html
 ---
 
 # [The Related Discourses](../index.html)
