--- a/03_samyukta/SA_04/SA4_1.md
+++ b/03_samyukta/SA_04/SA4_1.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 4. Truths | 1. Turning the Dharma Wheel'
 type: kramdown
 base: ../../
 previous: index.html
-next: ../SA_05/index.html
+next: ../../01_agama/samyukta/04/SA4_55.html
 ---
 
 # [The Related Discourses](../index.html)
