Added translations of T781, T802, and EA 24.6.

--- a/09_other_sutras/T780.md
+++ b/09_other_sutras/T780.md
@@ -67,7 +67,7 @@ next:
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [AN 6.64](https://suttacentral.net/an6.64){:target="_blank"} and [10.21](https://suttacentral.net/an10.21){:target="_blank"}, [SA 11.41](../01_agama/samyukta/11/SA11_41.html){:target="_blank"}, and [T781](T781.html){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with [AN 6.64](https://suttacentral.net/an6.64){:target="_blank"} and [10.21](https://suttacentral.net/an10.21){:target="_blank"}, [SA 11.41](../01_agama/samyukta/11/SA11_41.html){:target="_blank"}, [T781](T781.html){:target="_blank"}, and [T802](T802.html){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
