--- a/01_agama/ekottarika/24/EA_24_6.md
+++ b/01_agama/ekottarika/24/EA_24_6.md
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 24. The Tall Flag | 6. Miraculous Transformations'
+title: 'The Numerical Discourses | 24. The Tall Flag | 6. The Three Sabbath Days'
 type: kramdown
 base: ../../
-previous: EA_19_02.html
+previous: EA_24_5.html
 next: ../../../01_agama/ekottarika/27/EA_27_06.html
 ---
 
 # [The Numerical Discourses](../../index.html)
 ## Chapter 24: Tall Flag
-### 6. Miraculous Transformations
+### 6. The Three Sabbath Days
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
