--- a/01_agama/ekottarika/24/EA_24_6.md
+++ b/01_agama/ekottarika/24/EA_24_6.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Numerical Discourses | 24. The Tall Flag | 6. The Three Sabbath Days'
 type: kramdown
-base: ../../
+base: ../../../
 previous: EA_24_5.html
 next: ../../../01_agama/ekottarika/27/EA_27_06.html
 ---
