--- a/01_agama/ekottarika/24/EA_24_6.md
+++ b/01_agama/ekottarika/24/EA_24_6.md
@@ -133,7 +133,7 @@ Not having sex and not speaking falsely,\\
 Avoiding alcohol and staying away from flowers,\\
 And attachment to taste violates the observances.
 
-* {:verse}Singing songs and performing dances,\\
+* {:.verse}Singing songs and performing dances,\\
 The trainee abandons them like arhats.\\
 Now, keep the eight observances,\\
 Not forgetting them day or night.
