--- a/01_agama/samyukta/01/SA1_5.md
+++ b/01_agama/samyukta/01/SA1_5.md
@@ -14,16 +14,16 @@ next: SA1_6.html
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “You must correctly contemplate form, observing that form is impermanent and knowing it as it really is. Why is that? Monks, when you correctly contemplate form, observing that form is impermanent and knowing it as it really is, it stops desire and greed for form. When desire and greed for it are stopped, that’s said to be the mind’s liberation.
+2\. It was then that the Bhagavān addressed the monks, “You should correctly contemplate form, observe that form is impermanent, and know it as it really is. Why is that? Monks, when you correctly contemplate form, observe that form is impermanent, and know it as it really is, then desire and greed for form are stopped. When desire and greed are stopped, that’s said to be the mind’s liberation.
 {:#p2}
 
-3\. “Thus, you must correctly contemplate feeling … perception … volition … consciousness, observing that consciousness is impermanent and knowing it as it really is. Why is that? When you correctly contemplate consciousness, observing that consciousness is impermanent and knowing it as it really is, it stops desire and greed for consciousness. When desire and greed for it are stopped, that’s said to be the mind’s liberation.
+3\. “Thus, you should correctly contemplate feeling … perception … volition … consciousness, observe that consciousness is impermanent, and know it as it really is. Why is that? When you correctly contemplate consciousness, observe that consciousness is impermanent, and know it as it really is, desire and greed for consciousness are stopped. When desire and greed are stopped, that’s said to be the mind’s liberation.
 {:#p3}
 
-4\. “Thus, if someone whose mind is liberated wants to realize it themselves, then they will realize this: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”[\[2\]](#n2){:#ref2}
+4\. “Thus, someone wanting to realize the mind's liberation for themselves then can realize it: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”[\[2\]](#n2){:#ref2}
 {:#p4}
 
-5\. The monks who heard what the Buddha taught then rejoiced and approved.
+5\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p5}
 
 ### Notes
@@ -34,7 +34,7 @@ next: SA1_6.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 17 September 2020
+Last Revised: 19 December 2020
 {: .revised}
 
 ---
