--- a/01_agama/samyukta/01/SA1_9.md
+++ b/01_agama/samyukta/01/SA1_9.md
@@ -14,13 +14,13 @@ next: SA1_10.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “When you don’t know, don’t understand, don’t become free of desire for form, your mind isn’t liberated, and you aren’t able to transcend the fear of birth, old age, illness, and death. Thus, when you don’t know, don’t understand, and don’t become free of desire for feeling … perception … volition … consciousness, your mind isn’t liberated, and you aren’t able to transcend the fear of birth, old age, illness, and death.
+2\. It was then that the Bhagavān addressed the monks, “When you don’t know, understand, and become free of desire for form, your mind isn’t liberated, and you can’t transcend the fear of birth, old age, illness, and death. Thus, when you don’t know, understand, and become free of desire for feeling … perception … volition … consciousness, your mind isn’t liberated, and you can’t transcend the fear of birth, old age, illness, and death.
 {:#p2}
 
-3\. “Monks, if you know, understand, and become free of desire for form, your mind is liberated, and you’ll be able to transcend the fear of birth, old age, illness, and death. Thus, if you know, understand, and become free of desire for feeling … perception … volition … consciousness, your mind is liberated, and you’ll be able to transcend the fear of birth, old age, illness, and death.”
+3\. “Monks, if you know, understand, and become free of desire for form, your mind is liberated, and you can transcend the fear of birth, old age, illness, and death. Thus, if you know, understand, and become free of desire for feeling … perception … volition … consciousness, your mind is liberated, and you can transcend the fear of birth, old age, illness, and death.”
 {:#p3}
 
-4\. The monks who heard what the Buddha taught then rejoiced and approved.
+4\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p4}
 
 ### Notes
