Reorganized SA to the new folder up to SA 11. SA 12 and up are still using the old indices.

--- a/01_agama/samyukta/01/SA1_158.md
+++ b/01_agama/samyukta/01/SA1_158.md
@@ -14,7 +14,7 @@ next: SA1_172.html
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove in Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “There are five acquired aggregates. What are the five? The acquired aggregate of form and the acquired aggregates of feeling, perception, volition, and consciousness. If ascetics and priests are aware of their various past lives using the knowledge of past lives, those past consciousnesses, future consciousnesses, and present consciousness are all these five acquired aggregates. ‘I remember passing though past consciousness, future consciousness, and present consciousness. Thus was my form, thus was my feeling, thus was my perception, thus was my volition, and thus was my consciousness.’
+2\. It was then that the Bhagavān addressed the monks, “There are five acquired aggregates. What are the five? The acquired aggregate of form and the acquired aggregates of feeling, perception, volition, and consciousness. If ascetics and priests are aware of their various past lives using the knowledge of past lives, those past consciousnesses, future consciousnesses, and present consciousness are all these five acquired aggregates. ‘I remember passing through past consciousness, future consciousness, and present consciousness. Thus was my form, thus was my feeling, thus was my perception, thus was my volition, and thus was my consciousness.’
 {:#p2}
 
 3\. “If something is resistant and divisible, it’s called the acquired aggregate of form. When something resists when touched by hand, stone, stick, blade, cold, heat, thirst, hunger, biting insects, vipers, wind, or rain, it’s called resisting contact. Because something resists this, it’s the acquired aggregate of form. Moreover, this acquired aggregate of form is impermanent, painful, and liable to change.
