--- a/01_agama/samyukta/01/SA1_172.md
+++ b/01_agama/samyukta/01/SA1_172.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 1. The Aggregates | 172. Yamaka'
 type: kramdown
 base: ../../../
 previous: SA1_158.html
-next: ../06/SA6_5.html
+next: ../02/index.html
 ---
 
 # [The Related Discourses](../index.html)
