--- a/01_agama/samyukta/04/SA4_55.md
+++ b/01_agama/samyukta/04/SA4_55.md
@@ -3,8 +3,8 @@ layout: default
 title: 'The Related Discourses | 4. The Truths | 55. A Handful of Leaves'
 type: kramdown
 base: ../../../
-previous: ../../../03_samyukta/SA_04/SA4_1.html
-next: ../../../03_samyukta/SA_05/index.html
+previous: SA4_1.html
+next: ../05/index.html
 ---
 
 # [The Related Discourses](../index.html)
