--- a/01_agama/samyukta/06/SA6_5.md
+++ b/01_agama/samyukta/06/SA6_5.md
@@ -3,8 +3,8 @@ layout: default
 title: 'The Related Discourses | 6. Feeling | 5. Poison Arrows'
 type: kramdown
 base: ../../../
-previous: ../01/SA1_158.html
-next: ../07/SA7_10.html
+previous: index.html
+next: ../07/index.html
 ---
 
 # [The Related Discourses](../index.html)
