--- a/01_agama/samyukta/07/SA7_10.md
+++ b/01_agama/samyukta/07/SA7_10.md
@@ -3,8 +3,8 @@ layout: default
 title: 'The Related Discourses | 7. The Abodes of Mindfulness | 10. The Archer'
 type: kramdown
 base: ../../../
-previous: ../06/SA6_5.html
-next: ../../../03_samyukta/SA_10/index.html
+previous: index.html
+next: ../10/index.html
 ---
 
 # [The Related Discourses](../../../03_samyukta/)
