--- a/01_agama/samyukta/01/SA1_147.md
+++ b/01_agama/samyukta/01/SA1_147.md
@@ -3,7 +3,7 @@ layout: default
 title: 'The Related Discourses | 1. The Aggregates | 147. Three Gentlemen'
 type: kramdown
 base: ../../../
-previous: ../../../03_samyukta/SA_01/SA1_146.html
+previous: SA1_146.html
 next: SA1_148.html
 ---
 
