--- a/01_agama/samyukta/11/SA11_41.md
+++ b/01_agama/samyukta/11/SA11_41.md
@@ -3,7 +3,7 @@ layout: default
 title: 'The Related Discourses | 11. Powers | 41. The Tathāgata and the Arhat'
 type: kramdown
 base: ../../../
-previous: ../../../03_samyukta/SA_11/index.html
+previous: ../11/index.html
 next: SA11_58.html
 ---
 
