--- a/01_agama/samyukta/35/SA35_64.md
+++ b/01_agama/samyukta/35/SA35_64.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Related Discourses | 35. Views | 64. Wrong View Regarding Actions'
 type: kramdown
-base: ../../
+base: ../../../
 previous: SA35_61.html
 next: SA35_67.html
 ---
