--- a/01_agama/madhyama/MA_001.md
+++ b/01_agama/madhyama/MA_001.md
@@ -11,109 +11,120 @@ next: MA_002.html
 ## Chapter 1: Sevens
 ### 1. The Good Dharma
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “If a monk accomplishes seven things, then he will attain the happiness of the noble ones, and he’ll be rightly headed for the end of the contaminants. What are the seven? Namely, a monk knows the Dharma, knows the meaning, knows the time, knows moderation, knows himself, knows the assembly, and knows the superiority of people.
+2\. It was then that the Bhagavān addressed the monks, “If a monk accomplishes seven things, then he’ll attain the happiness of the noble ones, and he’ll be rightly headed for the end of the contaminants. What are the seven? A monk knows the teaching, knows the meaning, knows the time, knows moderation, knows himself, knows the assembly, and knows the superiority of people.
 {: #p2}
 
-#### Knowing the Dharma
+#### Knowing the Teaching
 
-3\. “How does a monk know the Dharma? It means a monk knows the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning.  This is called a monk who knows the Dharma.
+3\. “How does a monk know the teaching? A monk knows the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning.[\[2\]](#n2){:#ref2} This is called a monk who knows the teaching.
 {: #p3}
 
-“Suppose there is a monk who doesn’t know the Dharma, which is to say that he doesn’t know the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning.[\[2\]](#n2){:#ref2} Such a monk doesn’t know the Dharma.
+4\. “Suppose a monk doesn’t know the teaching, which is to say that he doesn’t know the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning. Such a monk doesn’t know the teaching.
+{: #p4}
 
-“Suppose there is a monk who well knows the Dharma, which is to say that he knows the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning. This is called a monk who well knows the Dharma.
+5\. “Suppose a monk well knows the teaching, which is to say that he knows the right sūtras, songs, assurances, verses, circumstances, records, legends, lectures, birth places, extensive discourses, unprecedented things, and explanations of meaning. This is called a monk who well knows the teaching.
+{: #p5}
 
 #### Knowing the Meaning
 
-4\. “How does a monk know the meaning? It means a monk knows the meaning of this or that expression is this or that meaning. This is called a monk who knows the meaning.
-{: #p4}
+6\. “How does a monk know the meaning? A monk knows that the meaning of this or that expression is this meaning or that meaning. This is called a monk who knows the meaning.
+{: #p6}
 
-“Suppose there is a monk who doesn’t know the meaning, which is to say that he doesn’t know the meaning of this or that expression is this or that meaning. Such a monk doesn’t know the meaning.
+7\. “Suppose a monk doesn’t know the meaning, which is to say that he doesn’t know that the meaning of this or that expression is this meaning or that meaning. Such a monk doesn’t know the meaning.
+{: #p7}
 
-“Suppose there is a monk who well knows the meaning, [421b] which is to say that he knows the meaning of this or that expression is this or that meaning. This is called a monk who well knows the meaning.
+8\. “Suppose a monk well knows the meaning, [421b] which is to say that he knows that the meaning of this or that expression is this meaning or that meaning. This is called a monk who well knows the meaning.
+{: #p8}
 
 #### Knowing the Time
 
-5\. “How does a monk know the time? It means a monk knows the time to cultivate low appearances, the time to cultivate high appearances, and the time to cultivate indifferent appearances.[\[3\]](#n3){:#ref3} This is called a monk who knows the time.
-{: #p5}
+9\. “How does a monk know the time? A monk knows the time to cultivate low appearances, the time to cultivate high appearances, and the time to cultivate indifferent appearances.[\[3\]](#n3){:#ref3} This is called a monk who knows the time.
+{: #p9}
 
-“Suppose there is a monk who doesn’t know the time, which is to say that he doesn’t know the time to cultivate low appearances, the time to cultivate high appearances, and the time to cultivate indifferent appearances. Such a monk doesn’t know the time.
+10\. “Suppose a monk doesn’t know the time, which is to say that he doesn’t know the time to cultivate low appearances, the time to cultivate high appearances, and the time to cultivate indifferent appearances. Such a monk doesn’t know the time.
+{: #p10}
 
-“Suppose there is a monk who well knows the time, which is to say that he knows the time to cultivate low appearances, the time to cultivate high appearances, and the time to cultivate indifferent appearances. This is called the monk who well knows the time.
+11\. “Suppose a monk well knows the time, which is to say that he knows the time to cultivate low appearances, the time to cultivate high appearances, and the time to cultivate indifferent appearances. This is called a monk who well knows the time.
+{: #p11}
 
 #### Knowing Moderation
 
-6\. “How does a monk know moderation? It means a monk knows moderation whether he is drinking, eating, departing, standing, sitting, lying down, speaking, being silent, relieving himself,[\[4\]](#n4){:#ref4} rousing himself when drowsy, or cultivating right knowledge. This is called a monk who knows moderation.
-{: #p6}
+12\. “How does a monk know moderation? It means a monk knows moderation whether he is drinking, eating, departing, standing, sitting, lying down, speaking, being silent, relieving himself,[\[4\]](#n4){:#ref4} rousing himself when drowsy, or cultivating right knowledge. This is called a monk who knows moderation.
+{: #p12}
 
-“Suppose there is a monk who doesn’t know moderation, which is to say that he doesn’t know it whether he is drinking, eating, departing, standing, sitting, lying down, speaking, being silent, relieving himself, rousing himself when drowsy, or cultivating right knowledge. Such a monk doesn’t know moderation.
+13\. “Suppose a monk doesn’t know moderation, which is to say that he doesn’t know it whether he is drinking, eating, departing, standing, sitting, lying down, speaking, being silent, relieving himself, rousing himself when drowsy, or cultivating right knowledge. Such a monk doesn’t know moderation.
+{: #p13}
 
-“Suppose there is a monk who well knows moderation, which is to say that he well knows it whether he is drinking, eating, departing, standing, sitting, lying down, speaking, being silent, relieving himself, rousing himself when drowsy, or cultivating right knowledge. This is called a monk who well knows moderation.
+14\. “Suppose a monk who well knows moderation, which is to say that he well knows it whether he is drinking, eating, departing, standing, sitting, lying down, speaking, being silent, relieving himself, rousing himself when drowsy, or cultivating right knowledge. This is called a monk who well knows moderation.
+{: #p14}
 
-#### Knowing Oneself
+#### Knowing Himeself
 
-7\. “How does a monk know himself? It means a monk knows ‘Such are my belief, discipline, learning, generosity, wisdom, eloquence, scriptures, and attainments.’ This is called a monk who knows himself.
-{: #p7}
+15\. “How does a monk know himself? It means a monk knows, ‘Such are my belief, discipline, learning, generosity, wisdom, eloquence, scriptures, and attainments.’ This is called a monk who knows himself.
+{: #p15}
 
-“Suppose there is a monk who doesn’t know himself, which is to say that he doesn’t know ‘Such are my belief, discipline, learning, generosity, wisdom, eloquence, scriptures, and attainments.’ Such a monk doesn’t know himself.
+16\. “Suppose a monk doesn’t know himself, which is to say that he doesn’t know, ‘Such are my belief, discipline, learning, generosity, wisdom, eloquence, scriptures, and attainments.’ Such a monk doesn’t know himself.
+{: #p16}
 
-“Suppose a monk well knows himself, which is to say that he knows ‘Such are my belief, discipline, learning, generosity, wisdom, eloquence, scriptures, and attainments.’ This is called a monk who well knows himself.
+17\. “Suppose a monk well knows himself, which is to say that he knows, ‘Such are my belief, discipline, learning, generosity, wisdom, eloquence, scriptures, and attainments.’ This is called a monk who well knows himself.
+{: #p17}
 
 #### Knowing the Assembly
 
-8\. “How does a monk know the assembly? It means a monk knows ‘This is an warrior assembly, this is a priest assembly, this is a householder assembly, and this is an ascetic assembly.[\[5\]](#n5){:#ref5} In those assemblies, I should thus depart, thus stand, thus sit, thus speak, and thus be silent.’ This is called a monk who knows the assembly.
-{: #p8}
-“Suppose there is a monk who doesn’t know the assembly, which is to say that he doesn’t know ‘This is an warrior assembly, this is a priest assembly, this is a householder assembly, and this is an ascetic assembly. In those assemblies, I should thus [421c] depart, thus stand, thus sit, thus speak, and thus be silent.’ Such a monk doesn’t know the assembly.
+18\. “How does a monk know the assembly? A monk knows: ‘This is an assembly of warriors … this is an assembly of priests … this is an assembly of householders … this is an assembly of ascetics.[\[5\]](#n5){:#ref5} In that assembly, I should thus depart, thus stand, thus sit, thus speak, and thus be silent.’ This is called a monk who knows the assembly.
+{: #p18}
 
-“Suppose there is a monk who well knows the assembly, which is to say that he well knows ‘This is an warrior assembly, this is a priest assembly, this is a householder assembly, and this is an ascetic assembly. In those assemblies, I should thus depart, thus stand, thus sit, thus speak, and thus be silent.’ This is called a monk who well knows the assembly.
+19\. “Suppose a monk doesn’t know the assembly, which is to say that he doesn’t know: ‘This is an assembly of warriors … this is an assembly of priests … this is an assembly of householders … this is an assembly of ascetics. In that assembly, I should thus [421c] depart, thus stand, thus sit, thus speak, and thus be silent.’ Such a monk doesn’t know the assembly.
+{: #p19}
+
+20\. “Suppose a monk well knows the assembly, which is to say that he well knows: ‘This is an assembly of warriors … this is an assembly of priests … this is an assembly of householders … this is an assembly of ascetics. In that assembly, I should thus depart, thus stand, thus sit, thus speak, and thus be silent.’ This is called a monk who well knows the assembly.
+{: #p20}
 
 #### Knowing the Superiority of People
 
-9\. “How does a monk know the superiority of people? It means a monk knows there are two kinds of people: believers and non-believers. If someone is a believer, he is superior; a non-believer is not.
-{: #p9}
+21\. “How does a monk know the superiority of people? A monk knows there are two kinds of people: believers and non-believers. If someone is a believer, they’re superior; a non-believer is not.
+{: #p21}
 
-10\. “It also means that there are two kinds of believers: those who frequently go to see the monks and those who don’t frequently go to see the monks. If someone frequently goes to see the monks, he is superior; someone who doesn’t frequently go to see the monks is not.
-{: #p10}
+22\. “Also, there are two kinds of believers: those who frequently go to see the monks and those who don’t frequently go to see the monks. If someone frequently goes to see the monks, they’re superior; someone who doesn’t frequently go to see the monks is not.
+{: #p22}
 
-11\. “It also means that there are two kinds of people who frequently go to see the monks: those who revere the monks and those who don’t revere the monks. If someone reveres the monks, he is superior; someone who doesn’t revere the monks is not.
-{: #p11}
+23\. “Also, there are two kinds of people who frequently go to see the monks: those who revere the monks and those who don’t revere the monks. If someone reveres the monks, they’re superior; someone who doesn’t revere the monks is not.
+{: #p23}
 
-12\. “It also means that there are two kinds of people who revere the monks: those who have questions about the sūtras and those who don’t have questions about the sūtras. If someone asks about the sūtras, he is superior; someone who doesn’t ask about the sūtras is not.
-{: #p12}
+24\. “Also, there are two kinds of people who revere the monks: those who have questions about the sūtras and those who don’t have questions about the sūtras. If someone asks about the sūtras, they’re superior; someone who doesn’t ask about the sūtras is not.
+{: #p24}
 
-13\. “It also means that there are two kinds of people who ask about the sūtras: those who single-mindedly listen to the sūtras and those who don’t single-mindedly listen to the sūtras. If someone single-mindedly listens to the sūtras, he is superior; someone who doesn’t single-mindedly listen to the sūtras is not.
-{: #p13}
+25\. “Also, there are two kinds of people who ask about the sūtras: those who whole-heartedly listen to the sūtras and those who don’t whole-heartedly listen to the sūtras. If someone whole-heartedly listens to the sūtras, they’re superior; someone who doesn’t whole-heartedly listen to the sūtras is not.
+{: #p25}
 
-14\. “It also means that there are two kinds of people who single-mindedly listen to the sūtras: those who hear and retain the Dharma and those who hear but don’t retain the Dharma. If someone hears and retains the Dharma, he is superior; someone who hears but doesn’t retain the Dharma is not.
-{: #p14}
+26\. “Also, there are two kinds of people who whole-heartedly listen to the sūtras: those who hear and retain the teaching and those who hear but don’t retain the teaching. If someone hears and retains the teaching, they’re superior; someone who hears but doesn’t retain the teaching is not.
+{: #p26}
 
-15\. “It also means that there are two kinds of people who hear and retain the Dharma: those who hear the Dharma and contemplate its meaning and those who hear the Dharma but don’t contemplate its meaning. If someone hears the Dharma and contemplates its meaning, he is superior; someone who hears the Dharma but doesn’t contemplate its meaning is not.
-{: #p15}
+27\. “Also, there are two kinds of people who hear and retain the teaching: those who hear the teaching and contemplate its meaning and those who hear the teaching but don’t contemplate its meaning. If someone hears the teaching and contemplates its meaning, they’re superior; someone who hears the teaching but doesn’t contemplate its meaning is not.
+{: #p27}
 
-16\. “It also means that there are two kinds of people who hear the Dharma and contemplate its meaning: those who know the Dharma, know its meaning, go from one teaching to the next teaching, conform to the Dharma, and conduct themselves according to the Dharma and those who don’t know the Dharma, don’t know its meaning, don’t go from one teaching to the next teaching, don’t conform to the Dharma, and don’t conduct themselves according to the Dharma. If someone knows the Dharma, knows its meaning, goes from one teaching to the next teaching, conforms to the Dharma, and conducts himself according to the Dharma, he is superior. Someone who doesn’t know the Dharma, doesn’t know its meaning, doesn’t go from one teaching to the next teaching, doesn’t conform to the Dharma, and doesn’t conduct himself according to the Dharma is not.
-{: #p16}
+28\. “Also, there are two kinds of people who hear the teaching and contemplate its meaning: those who know the teaching, know its meaning, go from one teaching to the next, conform to the teaching, and conduct themselves according to the teaching and those who don’t know the teaching, don’t know its meaning, don’t go from one teaching to the next, don’t conform to the teaching, and don’t conduct themselves according to the teaching. If someone knows the teaching, knows its meaning, goes from one teaching to the next, conforms to the teaching, and conducts themselves according to the teaching, they’re superior. Someone who doesn’t know the teaching, doesn’t know its meaning, doesn’t go from one teaching to the next, doesn’t conform to the teaching, and doesn’t conduct themselves according to the teaching is not.
+{: #p28}
 
-17\. “It also means that there are two kinds of people who know the Dharma, know its meaning, go from one teaching to the next teaching, conform to the Dharma, and conduct themselves according to the Dharma: those who benefit themselves, benefit others, benefit many people, pity the world, [422a] seek both meaning and benefit for gods and humans, and seek peace and happiness and those who don’t benefit themselves, don’t benefit others, don’t benefit many people, don’t pity the world, don’t seek both meaning and benefit for gods and humans, and don’t seek peace and happiness. If someone benefits himself, benefits others, benefits many people, pities the world, seeks both meaning and benefit for gods and humans, and seeks peace and happiness, this person is the very best among people. He is great, higher, exceptional, superior, honored, and marvelous.
-{: #p17}
+29\. “It also means that there are two kinds of people who know the teaching, know its meaning, go from one teaching to the next, conform to the teaching, and conduct themselves according to the teaching: those who benefit themselves, benefit others, benefit many people, pity the world, [422a] seek both meaning and benefit for gods and humans, and seek peace and happiness and those who don’t benefit themselves, don’t benefit others, don’t benefit many people, don’t pity the world, don’t seek both meaning and benefit for gods and humans, and don’t seek peace and happiness. If someone benefits themselves, benefits others, benefits many people, pities the world, seeks both meaning and benefit for gods and humans, and seeks peace and happiness, this person is the very best among people. They’re great, higher, exceptional, superior, honored, and marvelous.
+{: #p29}
 
-#### Conclusion
+30\. “It’s just as there’s milk because of the cow, cream because of milk, butter because of cream, refined butter because of butter, and ghee because of refined butter. Ghee is the very best of those things. It’s great, higher, exceptional, superior, honored, and marvelous. Such is the person who benefits himself, benefits others, benefits many people, pities the world, seeks both meaning and benefit for gods and humans, and seeks peace and happiness. Of these pairs of people as they’ve been described, as they’ve been discerned, and as they’ve been defined, they’re the best, great, higher, exceptional, superior, honored, and marvelous. This is called a monk who knows the superiority of people.”
+{: #p30}
 
-18\. “It’s just as there’s milk because of the cow, cream because of milk, butter because of cream, refined butter because of butter, and ghee because of refined butter. Ghee is the very best of those things. It’s great, higher, exceptional, superior, honored, and marvelous. Such is the person who benefits himself, benefits others, benefits many people, pities the world, seeks both meaning and benefit for gods and humans, and seeks peace and happiness. Of these pairs of people as they’ve been described, as they’ve been discerned, and as they’ve been defined, he is the best, great, higher, exceptional, superior, honored, and marvelous. This is called a monk who knows the superiority of people.”
-{: #p18}
-
-19\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and approved.
-{: #p19}
+31\. Thus did the Buddha speak. Those monks who heard what the Buddha taught rejoiced and approved.
+{: #p31}
 
 ### Notes
 
-1. {:#n1} Parallels include [AN 7.68](https://suttacentral.net/an7.68){: target="_blank"}, [EA 39.1](https://suttacentral.net/ea39.1){: target="_blank"}, [T27](https://suttacentral.net/t27){: target="_blank"}, and T1536.437b18-c10. [\[back\]](#ref1)
-2. {:#n2} This is the traditional list of 12 types of sūtras found in Indian Buddhist sources. Deciphering the precise order of this list is a challenge because Saṃghadeva translates all but one item (gāthā). Using the traditional Sanskrit interpretations of itivṛttaka, vyākaraṇa, and udāna as the primary clues, I arrive at this list: sūtra, geya, vyākaraṇa, gāthā, nidāna, itivṛttaka, avadāna, udāna, jātaka, vaipulya, adbhuta-dharma, and upadeśa. [\[back\]](#ref2)
-3. {:#n3} This passage is cryptic. A parallel passage in Xuanzang’s translation of the **Saṃgītiparyāya Abhidharma** (T1536.437b24-26) reads “this is a time he should cultivate calm appearances … active appearances … indifferent appearances.” Thus, these items seem to characterize a monk’s activities. [\[back\]](#ref3)
+1. {:#n1} An alternative reading of this sutra’s title is “Good Qualities.” Parallels include [AN 7.68](https://suttacentral.net/an7.68){: target="_blank"}, [EĀ 39.1](https://suttacentral.net/ea39.1){: target="_blank"}, [T27](https://suttacentral.net/t27){: target="_blank"}, and a passage in the *Saṃgītiparyāya Abhidharma* (T1536.437b18-c10). [\[back\]](#ref1)
+2. {:#n2} This is the traditional list of 12 types of sūtras found in Indian Buddhist sources. Deciphering the precise order of this list is a challenge because Saṃghadeva translates all but one item (gāthā), and it varies in other sources. Using the traditional Skt interpretations of itivṛttaka, vyākaraṇa, and udāna as the primary clues, I arrive at this list: sūtra, geya, vyākaraṇa, gāthā, nidāna, itivṛttaka, avadāna, udāna, jātaka, vaipulya, adbhuta-dharma, and upadeśa. [\[back\]](#ref2)
+3. {:#n3} This passage is cryptic. A parallel passage in Xuanzang’s translation of the *Saṃgītiparyāya Abhidharma* (T1536.437b24-26) reads: “this is a time he should cultivate calm appearances … active appearances … indifferent appearances.” This seems to refer to a monk’s social manner or daily activities. [\[back\]](#ref3)
 4. {:#n4} *Relieving himself*. The Chinese expression is a euphemism for defecating and urinating. [\[back\]](#ref4)
-5. {:#n5} *Warrior … priest … householder … ascetic*. The Skt. equivalents are kṣatriya, brāhmaṇa, gṛhapati, and śramaṇa. [\[back\]](#ref5)
+5. {:#n5} *warriors … priests … householders … ascetics*. Skt. kṣatriya, brahmana, gṛhapati, and śramaṇa. The warriors were in later eras the nobility of India, being the heads of government. Householders were well-to-do and influential people due to wealth, but they weren’t part of the nobility or priesthood. Ascetics were spiritual practitioners and leaders who had left secular life and taken vows of poverty. [\[back\]](#ref5)
 
 ---
 
