Added DA 21 and fixed a bunch of broken header links in random SA sutras.

--- a/01_agama/samyukta/01/SA1_147.md
+++ b/01_agama/samyukta/01/SA1_147.md
@@ -7,8 +7,8 @@ previous: SA1_146.html
 next: SA1_148.html
 ---
 
-# [The Related Discourses](../../../03_samyukta/)
-## [1. The Aggregates](../../../03_samyukta/SA_01/)
+# [The Related Discourses](../index.html)
+## [1. The Aggregates](index.html)
 ### 147. Three Gentlemen
 
 1\. Thus have I heard: One time, the Buddha was staying at the Bamboo Park Monastery in Cedi.
