--- a/01_agama/samyukta/01/SA1_149.md
+++ b/01_agama/samyukta/01/SA1_149.md
@@ -7,8 +7,8 @@ previous: SA1_148.html
 next: SA1_150.html
 ---
 
-# [The Related Discourses](../../../03_samyukta/)
-## [1. The Aggregates](../../../03_samyukta/SA_01/)
+# [The Related Discourses](../index.html)
+## [1. The Aggregates](index.html)
 ### 149. Self
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
