--- a/01_agama/samyukta/01/SA1_42.md
+++ b/01_agama/samyukta/01/SA1_42.md
@@ -7,8 +7,8 @@ previous: SA1_18.html
 next: SA1_138.html
 ---
 
-# [The Related Discourses](../../../03_samyukta/)
-## [1. The Aggregates](../../../03_samyukta/SA_01/)
+# [The Related Discourses](../index.html)
+## [1. The Aggregates](index.html)
 ### 17. Cause and Condition
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying in the Kalandaka’s Bamboo Park of Rājagṛha. At the time, the Venerable Śāriputra and Mahākauṣṭhila was present on Mount Gṛdhrakūṭa.
