--- a/01_agama/samyukta/06/SA6_5.md
+++ b/01_agama/samyukta/06/SA6_5.md
@@ -8,7 +8,7 @@ next: ../07/index.html
 ---
 
 # [The Related Discourses](../index.html)
-## [6. Feeling](../../../03_samyukta/SA_06/)
+## [6. Feeling](index.html)
 ### 5. Poison Arrows
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Kalandaka’s Bamboo Park of Rājagṛha.
