--- a/01_agama/samyukta/35/SA35_1.md
+++ b/01_agama/samyukta/35/SA35_1.md
@@ -7,8 +7,8 @@ previous: index.html
 next: SA35_7.html
 ---
 
-# [The Related Discourses](../../../03_samyukta/)
-## [35. Views](../../../03_samyukta/SA_35/index.html)
+# [The Related Discourses](../index.html)
+## [35. Views](index.html)
 ### 1. The Six Abodes of Views
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
