--- a/01_agama/samyukta/01/SA1_148.md
+++ b/01_agama/samyukta/01/SA1_148.md
@@ -7,8 +7,8 @@ previous: SA1_147.html
 next: SA1_149.html
 ---
 
-# [The Related Discourses](../../../03_samyukta/)
-## [1. The Aggregates](../../../03_samyukta/SA_01/)
+# [The Related Discourses](../index.html)
+## [1. The Aggregates](index.html)
 ### 148. Sixteen Monks
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the Umbrella Mango Tree Park on the bank of the Bhadra River in Mathurā.
