--- a/01_agama/samyukta/07/SA7_10.md
+++ b/01_agama/samyukta/07/SA7_10.md
@@ -7,8 +7,8 @@ previous: index.html
 next: ../10/index.html
 ---
 
-# [The Related Discourses](../../../03_samyukta/)
-## [7. The Abodes of Mindfulness](../../../03_samyukta/SA_07/)
+# [The Related Discourses](../index.html)
+## [7. The Abodes of Mindfulness](index.html)
 ### 10. The Archer
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
