--- a/01_agama/samyukta/11/SA11_41.md
+++ b/01_agama/samyukta/11/SA11_41.md
@@ -7,8 +7,8 @@ previous: ../11/index.html
 next: SA11_58.html
 ---
 
-# [The Related Discourses](../../../03_samyukta/)
-## [11. Powers](../../../03_samyukta/SA_11/)
+# [The Related Discourses](../index.html)
+## [11. Powers](index.html)
 ### 41. The Tathāgata and the Arhat
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
