--- a/01_agama/samyukta/19/SA19_15.md
+++ b/01_agama/samyukta/19/SA19_15.md
@@ -8,7 +8,7 @@ next: ../34/index.html
 ---
 
 # [The Related Discourses](../index.html)
-## 19. Indra
+## [19. Indra](index.html)
 ### 15. The Sabbath Days
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
