Renamed SA2 3.14 to SA2 180, added translation of SA 25.57 and SA2 180.

--- a/01_agama/samyukta2/SA2_46.md
+++ b/01_agama/samyukta2/SA2_46.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 3. Indra | 14. The Eighth Day'
+title: 'The Alternate Related Discourses | 46. The Eighth Day'
 type: kramdown
 base: ../../../
 previous:
@@ -8,8 +8,7 @@ next:
 ---
 
 # The Alternate Related Discourses
-## 3. Indra
-### 14. The Eighth Day
+### 46. The Eighth Day
 
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
@@ -60,7 +59,7 @@ With virtues like myself.’
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [AN 3.37](https://suttacentral.net/an3.37){:target="_blank"}-[38](https://suttacentral.net/an3.38){:target="_blank"}, [SA 19.15](../../samyukta/19/SA19_15.html){:target="_blank"}, and [EA 24.6](../../ekottarika/24/EA24_6.html){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with [AN 3.37](https://suttacentral.net/an3.37){:target="_blank"}-[38](https://suttacentral.net/an3.38){:target="_blank"}, [SA 19.15](../samyukta/19/SA19_15.html){:target="_blank"}, and [EA 24.6](../ekottarika/24/EA_24_6.html){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
