--- a/01_agama/samyukta/19/SA19_15.md
+++ b/01_agama/samyukta/19/SA19_15.md
@@ -4,7 +4,7 @@ title: 'The Related Discourses | 19. Indra | 15. The Sabbath Days'
 type: kramdown
 base: ../../../
 previous: index.html
-next: ../34/index.html
+next: ../25/index.html
 ---
 
 # [The Related Discourses](../index.html)
@@ -74,7 +74,7 @@ Their cultivation is likewise!’
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with [AN 3.37](https://suttacentral.net/an3.37){:target="_blank"}-[38](https://suttacentral.net/an3.38){:target="_blank"}, [SA2 3.14](../../samyukta2/03/SA2_3_14.html){:target="_blank"}, and [EA 24.6](../../ekottarika/24/EA24_6.html){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with [AN 3.37](https://suttacentral.net/an3.37){:target="_blank"}-[38](https://suttacentral.net/an3.38){:target="_blank"}, [SA2 46](../../samyukta2/SA2_46.html){:target="_blank"}, and [EA 24.6](../../ekottarika/24/EA24_6.html){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
